Update BankAccount.java for EN English